correcting spacing issues
pages with multiple headlines treat each h element as a new parent, introducing ugly line breaks
in addition, images needed more spacing to keep blog articles legible

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ p {
   margin: 30px 0;
   text-indent: 40px;
 }
-p:first-child {
+p:first-of-type {
   text-indent: 0;
   margin-bottom: 5px;
 }
@@ -59,6 +59,9 @@ a:focus {
   text-decoration: underline;
   text-decoration-style: solid;
   color: {{ site.hover-col }};
+}
+img {
+  margin: 15px;
 }
 blockquote {
   color: #808080;
